# mypy-gitlab-code-quality

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tests.py
.github/workflows/: static-check.yml  unittest.yml
mypy_gitlab_code_quality/: __init__.py
parser/: __init__.py
requirements/: dev.txt
