[project]
name = "mypy-gitlab-code-quality"
version = "1.1.0"
description = "Simple script to generate gitlab code quality report from output of mypy."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Dmitry Samsonov", email = "dmitriy.samsonov28@gmail.com" },
    { name = "OokamiTheLord" },
]
keywords = ["gitlab", "gitlab-ci", "mypy", "codequality"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[project.urls]
"Homepage" = "https://github.com/soul-catcher/mypy-gitlab-code-quality"
"Bug Tracker" = "https://github.com/soul-catcher/mypy-gitlab-code-quality/issues"
[project.scripts]
mypy-gitlab-code-quality = "mypy_gitlab_code_quality:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
python_version = "3.8"
exclude = ['test.*\.py']

[tool.ruff]
select = ["ALL"]
ignore = [
    "D1",  # Docstrings
    "PT",  # Pytest. Project uses Unittest
    "ANN",  # annotations. There is Mypy in project
    "COM",  # Comma checks, Just trust Black
]
pydocstyle.convention = "pep257"

[tool.black]
target-versions = ["py38", "py39", "py310", "py311", "py312"]
