[metadata]
author = Dmitry Samsonov
author_email = dmitriy.samsonov28@gmail.com
license = MIT
name = mypy-gitlab-code-quality
url = https://github.com/soul-catcher/mypy-gitlab-code-quality
version = 0.0.3
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = parser

[options.entry_points]
console_scripts =
    mypy-gitlab-code-quality = parser:main
