[metadata]
author = Dmitry Samsonov
author_email = dmitriy.samsonov28@gmail.com
license = MIT
name = mypy-gitlab-code-quality
url = https://github.com/soul-catcher/mypy-gitlab-code-quality
version = 0.0.6
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = mypy_gitlab_code_quality
python_requires = >=3.10

[options.entry_points]
console_scripts =
    mypy-gitlab-code-quality = mypy_gitlab_code_quality:main
