[metadata]
author = Dmitry Samsonov
author_email = dmitriy.samsonov28@gmail.com
license = MIT
name = mypy-gitlab-code-quality
description = Simple script to generate gitlab code quality report from output of mypy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soul-catcher/mypy-gitlab-code-quality
version = 0.0.13
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = mypy_gitlab_code_quality
python_requires = >=3.7

[options.entry_points]
console_scripts =
    mypy-gitlab-code-quality = mypy_gitlab_code_quality:main
